welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:2: error: ')' expected but '.' found.
while(getCouleurSol()Color.green!=false){
                          ^DwarfCode:22: error: illegal start of simple expression
	}
        ^