welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while(getCouleurSol()Color.green!=false){
	while(estSurBiscuit()==false ){
		recule()
	}
	if (estSurBiscuit()==true){
		prendBiscuit()
		while(estSurBiscuit()==false){
			avance()
		}
		recule()
		poseBiscuit() 
		recule()
	}
}
		gauche()
		avance()
		gauche()
		avance()
		gauche()